--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
       </div>
-      <p><i class="fa-solid fa-hand-holding-dollar"></i>   comprá en cuotas y con tarjeta de credito</p>
+      <p><i class="fa-solid fa-hand-holding-dollar"></i>   Comprá en cuotas y con tarjeta de crédito</p>
       <nav class="header_nav">
         <ul type="none">
           <li><a href="">Ofertas</a></li>
@@ -39,7 +39,7 @@
     </header>
     <main class = "main">
       <section class="main_section_ultimavisita">
-        <h3>Basado en tu ultima visita</h3>
+        <h3>Basado en tu última visita</h3>
         <article>
           <div>
             <img
@@ -72,9 +72,9 @@
               alt="Samsung Galaxy"
             />
           </div>
-          <p>$70500</p>
+          <p>$70.500</p>
           <p>10% OFF</p>
-          <h4>Samsung galaxi</h4>
+          <h4>Samsung galaxy</h4>
         </article>
         <article>
           <div>
@@ -123,9 +123,9 @@
               alt="Samsung Galaxy"
             />
           </div>
-          <p>$70500</p>
+          <p>$70.500</p>
           <p>10% OFF</p>
-          <h4>Samsung galaxi</h4>
+          <h4>Samsung galaxy</h4>
         </article>
         <article>
           <div>
@@ -144,6 +144,7 @@
 
     <footer class="footer">
       <section class="footer_pago">
+        <div class="pago"><i class="fa-solid fa-credit-card"></i></div>
         <h4>Pagá con tarjeta o en efectivo</h4>
         <p>
           Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
@@ -151,20 +152,22 @@
         </p>
       </section>
       <section class="footer_envio">
-        <h4>Envío gratis desde $ 2.500</h4>
+        <div class="envio"><i class="fa-solid fa-gift"></i></div>
+        <h4>Envío gratis desde $2.500</h4>
         <p>
           Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
           miles de productos. Es un beneficio de Mercado Puntos.
         </p>
       </section>
       <section class="footer_seguridad">
+        <div class="seguridad"><i class="fa-solid fa-user-shield"></i></div>
         <h4>Seguridad, de principio a fin</h4>
         <p>
           ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas
           hacer, porque estás siempre protegid@.
         </p>
       </section>
-      <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+      <h5>Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
     </footer>
   </body>
 </html>
