--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,70 +1,73 @@
-body {margin:0px;
-    padding: 0px;
-    box-sizing: border-box;
+body {
+  margin:0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.body_header {
+  background-color: var(--color_Amarillo);
+  display: flex;
+  flex-wrap: wrap;
+
+}
   
-  }
+.body_header_one {
+  width: 100%;
+  display: flex;
+  padding: 10px 0px;
+
+}
   
-  .body_header {
-    background-color: var(--color_Amarillo);
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .body_header_one {
-      width: 100%;
-      display: flex;
-      padding: 10px 0px;
-  }
-  
-  .header_div_logo {
+.header_div_logo {
     width: 40%;
-    
+
   }
-  .header_div_logo img{
-      width: 90%;
-  }
+
+.header_div_logo img {
+    width: 90%;
+
+}
   
-  
-  .header_div_formulario {
-     height: 28px;
+.header_div_formulario {
+    height: 28px;
     width: 58%;
     
-   
-  }
-  .header_div_formulario input {
-      width: 80%;
-      height: 25px;;
+}
+
+.header_div_formulario input {
+    width: 80%;
+    height: 25px;
   
-  }
-  .header_div_formulario button {
-      width: 25px;
-      height: 25px;;
+}
+
+.header_div_formulario button {
+    width: 25px;
+    height: 25px;
   
-  }
+}
   
-  
-  
-      
-  
-  
-  .header_texto {
+.header_texto {
     text-align: center;
     width: 100%;
-  }
   
-  .header_barraDeNavegacion {
+}
+  
+.header_barraDeNavegacion {
     padding-bottom: 3px;
     width: 100%;
     display: flex;
-  }
   
-  .header_div_burger_menu {
+}
+  
+.header_div_burger_menu {
     text-align: center;
     font-size: 20px;
     justify-content: center;
     width: 100%;
-  }
-  .header_div_burger_menu button {
+
+}
+
+.header_div_burger_menu button {
     background-color: var(--color_Celeste);
     color: white;
     border: solid 1px black;
@@ -72,32 +75,40 @@ body {margin:0px;
     margin-bottom: 20px;
     border-radius: 5px;
     
-  }
+}
   
   /* main */
   
-  .main {
+.main {
     background-color: var(--color_Gris_claro);
     text-align: center;
-  }
-  .main_section {
+  
+}
+
+.main_section {
     width: 90%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-  }
-  .main_section_article {
+
+}
+
+.main_section_article {
       width: 100%;
-  }
-  .main_section_article_imagen {
-    width: 100%;
-  }
   
-  .main_section_article_imagen img {
-    width: 100%;
-  }
+}
   
-  .main_section_article_datos {
+.main_section_article_imagen {
+    width: 100%;
+  
+}
+  
+.main_section_article_imagen img {
+    width: 100%;
+  
+}
+  
+.main_section_article_datos {
       border: solid var(--color_Gris_claro) 1px;
       padding: 15px;
       background-color: white;
@@ -105,32 +116,36 @@ body {margin:0px;
       flex-wrap: wrap;
       position: relative;
       justify-content: space-around;
-  }
-  .main_section_article_datos i {
+
+}
+
+.main_section_article_datos i {
       color: var(--color_Verde);
       display: block;
-         font-size: 16px;
-         padding: 5px;
-         width: 30px;
-         height: 30px;
-         border: 1px solid #39b54a;
-         background-color: #FFF;
-         border-radius: 50%;
-         position: absolute;
-         right: 20px;
-         top: -15px;
-  }
+      font-size: 16px;
+      padding: 5px;
+      width: 30px;
+      height: 30px;
+      border: 1px solid #39b54a;
+      background-color: #FFF;
+      border-radius: 50%;
+      position: absolute;
+      right: 20px;
+      top: -15px;
+    
+}
   
-  .main_section_article_datos .precio {
+.main_section_article_datos .precio {
     font-size: 18px;
     width: 33%;
-  }
+
+}
   
-  .main_section_article_datos .descripcion {
-   width: 100%;
-   display: none;
+.main_section_article_datos .descripcion {
+     width: 100%;
+     display: none;
   
-  }
+}
   
   /* footer */
   
@@ -144,19 +159,15 @@ body {margin:0px;
     color: #39b54a;
     width: 65%;
   }
-  
-  .footer_envio {
-  }
-  
-  .footer_seguridad {
-  }
-  
+
   footer i {
     color: #1259c3;
     text-align: center;
     font-size: 2em;
     margin-top: 2em;
   }
+
+
   @media screen and (max-width: 360px) {
     header .nav__navegacion {
       display: none;
@@ -173,18 +184,18 @@ body {margin:0px;
       box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
   }
-  footer h4 {
-    text-align: center;
-    margin: 0 auto;
+    footer h4 {
+      text-align: center;
+      margin: 0 auto;
   }
-  footer p {
-    text-align: center;
-    margin: 0 auto;
-    font-size: 15px;
+    footer p {
+      text-align: center;
+      margin: 0 auto;
+      font-size: 15px;
   }
-  footer .copi {
-    padding: 0%;
-    font-size: 10px;
+    footer .copi {
+      padding: 0%;
+      font-size: 10px;
    
   }
   
@@ -194,84 +205,72 @@ body {margin:0px;
           margin-left: 30px;
           padding: 5px;
        }
+
       .main_section{
           gap:25px;
       }
-  
-  
+      
       .main_section_article {
           width: 48%;
-          
-  
       }
-  
   
       .body_header_one {
         width: 60%;
         display: flex;
         padding: 10px 0px;
-    }
+      }
     
-    .header_div_logo {
-      width: 40%;
+      .header_div_logo {
+         width: 40%;
       
-    }
-    .header_div_logo img{
+      }
+
+      .header_div_logo img{
         width: 90%;
-    }
+      }
     
-    
-    .header_div_formulario {
+      .header_div_formulario {
        height: 28px;
-      width: 58%;
+       width: 58%;
       
-     
-    }
-    .header_div_formulario input {
+      }
+
+      .header_div_formulario input {
         width: 80%;
-        height: 25px;;
+        height: 25px;
     
-    }
-    .header_div_formulario button {
+      }
+      .header_div_formulario button {
         width: 25px;
-        height: 25px;;
+        height: 25px;
+      }
+
+      .header_texto {
+         text-align: center;
+         width: 35%;
+      }
     
-    }
+      .header_barraDeNavegacion {
+         padding-bottom: 3px;
+         width: 100%;
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: space-between;
+       }
+
+       .header_barraDeNavegacion ul{
+         display: flex;
+         justify-content:space-around;
+         width: 42%;
+       }
+
+       .header_barraDeNavegacion ul li{
+          display: block;
+       }
     
-    
-    
-        
-    
-    
-    .header_texto {
-      text-align: center;
-      width: 35%;
-    }
-    
-    .header_barraDeNavegacion {
-      padding-bottom: 3px;
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-    }
-    .header_barraDeNavegacion ul{
-      display: flex;
-      justify-content:space-around;
-      width: 42%;
-    }
-    .header_barraDeNavegacion ul li{
-      display: block;
-      
-      
-    }
-    
-    .header_div_burger_menu {
-      display: none;
-    }
-    
-  /* hola */
-  
+        .header_div_burger_menu {
+           display: none;
+       }
     }
   
   @media (min-width:1024px){
@@ -284,7 +283,6 @@ body {margin:0px;
       .main_section_article {
           width: 22%;
           
-  
       }
      
   .main_section_article_datos .precio {
@@ -292,8 +290,7 @@ body {margin:0px;
       width: 45%;
     }
   
-  
-    .descuento {
+  .descuento {
       color: #39b54a;
       width: 52%;
     }
