--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +9,13 @@
     <link rel="stylesheet" href="/css/styles.css" />
 
     <script src="https://kit.fontawesome.com/1e26533911.js" crossorigin="anonymous"></script>
+
   </head>
+
   <body>
+
     <header class="body_header">
+
       <div class="body_header_one">
         <div class="header_div_logo">
           <img src="/images/logo-mercado-liebre.svg" alt="" />
@@ -27,7 +32,6 @@
           <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y con tarjeta de crédito
         </p>
       </div>
-
       <nav class="header_barraDeNavegacion">
         <ul type="none" class="nav__navegacion">
           <li><a href="">Ofertas</a></li>
@@ -55,8 +59,11 @@
           <i class="fas fa-bars"></i>
         </button>
       </div>
+
     </header>
+
     <main class="main">
+
       <h3>Basado en tu última visita</h3>
       <section class="main_section">
         <article class="main_section_article">
@@ -70,7 +77,6 @@
             <h4 class="descripcion">Cafetera Moulinex</h4>
           </div>
         </article>
-
         <article class="main_section_article">
           <div class="main_section_article_imagen">
             <img src="/images/img-macbook-pro-2019.jpg" alt="mac book" />
@@ -82,13 +88,9 @@
             <h4 class="descripcion">Mac Book 2019</h4>
           </div>
         </article>
-
         <article class="main_section_article">
           <div class="main_section_article_imagen">
-            <img
-              src="/images/img-samsung-galaxy-s10.jpg"
-              alt="Samsung Galaxy"
-            />
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy"/>
           </div>
           <div class="main_section_article_datos">
             <i class="fa-solid fa-truck"></i>
@@ -97,7 +99,6 @@
             <h4 class="descripcion">Samsung galaxy</h4>
           </div>
         </article>
-
         <article class="main_section_article">
           <div class="main_section_article_imagen">
             <img src="/images/img-tv-samsung-smart.jpg" alt="SmartTv 43 " />
@@ -136,10 +137,7 @@
         </article>
         <article class="main_section_article">
           <div class="main_section_article_imagen">
-            <img
-              src="/images/img-samsung-galaxy-s10.jpg"
-              alt="Samsung Galaxy"
-            />
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy"/>
           </div>
           <div class="main_section_article_datos">
             <i class="fa-solid fa-truck"></i>
@@ -160,9 +158,11 @@
           </div>
         </article>
       </section>
+
     </main>
 
     <footer class="footer">
+
       <section class="footer_pago">
         <i class="fa-solid fa-credit-card"></i>
         <h4>Pagá con tarjeta o en efectivo</h4>
@@ -186,6 +186,9 @@
         </p>
       </section>
       <p class="copi">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+
     </footer>
+
   </body>
+  
 </html>
