--- a/views/register.html
+++ b/views/register.html
@@ -67,6 +67,8 @@
       <section class="register__main_section">
 
         <h1>Registrate</h1>
+        
+        
         <form action="" class="form">
             <div class="form__box">
                 <label class="form__label" for="nombre">Nombre</label>
@@ -75,6 +77,10 @@
             <div class="form__box">
                 <label class="form__label" for="apellido">Apellido</label>
                 <input class="form__input" type="text" id="apellido">
+            </div>
+            <div class="form__box">
+                <label class="form__label" for="usuario">Nombre de Usuario</label>
+                <input class="form__input" type="text" id="usuario">
             </div>
             <div class="form__box">
                 <label class="form__label" for="email">Correo electrónico</label>
@@ -88,7 +94,7 @@
                 <label class="form__label" for="password2">Confirma tu contraseña</label>
                 <input class="form__input" type="password" id="password2">
             </div>
-            <div class="form__box form__flex--right">
+            <div class="form__flex--right">
                 <a class="form__button form__button--cancel" href="">Cancelar</a>
                 <button class="form__button form__button--submit" type="submit">Registrate</button>
             </div>
