--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,6 +1,6 @@
 .register__main_section h1 {
     text-align: center;
-    margin: 30px 0;
+    margin: 30px 0 20px;
     font-size: 22px;
 
 }
@@ -11,7 +11,7 @@
 
 @media (min-width:768px) {
     .register__main_section {
-        width: 350px;
+        width: 600px;
         margin: 30px auto;
 
     }
