--- a/views/register.html
+++ b/views/register.html
@@ -73,26 +73,32 @@
             <div class="form__box">
                 <label class="form__label" for="nombre">Nombre</label>
                 <input class="form__input" type="text" id="nombre">
+                <span class="form__error__msg">El nombre es obligatorio</span>
             </div>
             <div class="form__box">
                 <label class="form__label" for="apellido">Apellido</label>
                 <input class="form__input" type="text" id="apellido">
+                <span class="form__error__msg">El apellido es obligatorio</span>
             </div>
             <div class="form__box">
                 <label class="form__label" for="usuario">Nombre de Usuario</label>
                 <input class="form__input" type="text" id="usuario">
+                <span class="form__error__msg">El nombre de usuario es obligatorio</span>
             </div>
             <div class="form__box">
                 <label class="form__label" for="email">Correo electrónico</label>
                 <input class="form__input" type="email" id="email">
+                <span class="form__error__msg">El email es obligatorio</span>
             </div>
             <div class="form__box">
                 <label class="form__label" for="password">Contraseña</label>
                 <input class="form__input" type="password" id="password">
+                <span class="form__error__msg">La contraseña debe tener 10 carácteres com mínimo</span>
             </div>
             <div class="form__box">
                 <label class="form__label" for="password2">Confirma tu contraseña</label>
                 <input class="form__input" type="password" id="password2">
+                <span class="form__error__msg">La contraseña debe tener 10 carácteres com mínimo</span>
             </div>
             <div class="form__flex--right">
                 <a class="form__button form__button--cancel" href="">Cancelar</a>
