--- a/views/home.html
+++ b/views/home.html
@@ -41,11 +41,11 @@
         </ul>
         <ul type="none" class="nav__navegacion">
           <li>
-            <a href="/login">Creá tu cuenta</a>
+            <a href="/register">Creá tu cuenta</a>
             <i class="fa-solid fa-address-card"></i>
           </li>
           <li>
-            <a href="/register">Ingresá</a>
+            <a href="/login">Ingresá</a>
             <i class="fa-solid fa-right-to-bracket"></i>
           </li>
           <li>
