--- a/public/css/general.css
+++ b/public/css/general.css
@@ -6,4 +6,19 @@
     --color_Gris_claro: #ebebeb;
     --color_Verde: #39b54a;
     --color_Rojo: #DF5837;
+    --tipografia: "Roboto"; 
+     --colorVerde: #39b54a;
+    --tamanioTexto: 12px;
+    --tamanioTitulares: 24px;
+        
     }
+    
+    li{
+        list-style: none;
+        font-size: var();
+    }
+    a{
+        text-decoration: none;
+        color: var(--GrisOscuro);
+    }
+    
