--- a/public/css/register.css
+++ b/public/css/register.css
@@ -9,10 +9,101 @@
     padding: 20px;
 }
 
-@media (min-width:768px) {
+.form {
+    background-color: var(--colorGrisClaro);
+    padding: 20px;
+}
+
+.form h4 {
+    font-size: 16px;
+    margin: 3px;
+}
+
+.form__div {
+    margin: 10px 0px;
+
+}
+
+.form__div input {
+    width: 100%;
+    margin: 3px;
+    padding-left: 5px;
+    height: 30px;
+    border: transparent;
+    border-radius: 5px;
+
+}
+
+.form_div_radio {
+    margin: 10px 0px;
+}
+
+.form_div_radio label {
+    display: block;
+    margin: 5px;
+    padding: 5px;
+}
+
+.form_div_checkbox {
+    margin: 10px 0px;
+}
+
+.form_div_checkbox label {
+    display: block;
+    margin: 5px;
+    padding: 5px;
+}
+
+.form_div_button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 40px 0px;
+}
+
+.form_div_button button {
+    width: 45%;
+    height: 30px;
+    background-color: var(--colorGrisOscuro);
+    border-radius: 5px;
+    border: var(--colorGrisOscuro);
+}
+
+.form_div_button--login {
+    margin: 20px 0px;
+}
+
+.form_div_button--login button {
+    width: 100%;
+    height: 30px;
+    margin: 20px 0px;
+    background-color: var(--colorGrisOscuro);
+    border-radius: 5px;
+    border: var(--colorGrisOscuro);
+}
+.login button{
+    width: 100%;
+    background-color: rgb(187, 177, 177);
+}
+.login button:hover{
+    background-color:var(--colorCeleste);
+}
+
+/* MAIN TABLET */
+@media (min-width: 768px) {
+
+    .form {
+        width: 600px;
+        border: solid black 1px;
+        margin: 30px auto;
+        border: solid 1px rgba(128, 128, 128, 0.7);
+        border-radius: 20px;
+        padding: 25px;
+    }
+
     .register__main_section {
         width: 600px;
         margin: 30px auto;
 
     }
-}
+    }
