--- a/views/register.html
+++ b/views/register.html
@@ -41,11 +41,11 @@
         </ul>
         <ul type="none" class="nav__navegacion">
           <li>
-            <a href="/login">Creá tu cuenta</a>
+            <a href="/register">Creá tu cuenta</a>
             <i class="fa-solid fa-address-card"></i>
           </li>
           <li>
-            <a href="/register">Ingresá</a>
+            <a href="/login">Ingresá</a>
             <i class="fa-solid fa-right-to-bracket"></i>
           </li>
           <li>
@@ -63,52 +63,62 @@
     </header>
 
     <main class="register__main">
+      <form action="" class="form">
+          <div class="form__div">
+              <h4>Nombre y Apellido</h4>
+              <input type="text" name="name" placeholder="Nombre y Apellido">
+          </div>
+          <div class="form__div">
+              <h4>Nombre de usuario</h4>
+              <input type="text" name="user" placeholder="Nombre de usuario">
+          </div>
+          <div class="form__div">
+              <h4>E-mail</h4>
+              <input type="text" name="email" placeholder="E-mail">
+          </div>
+          <div class="form__div">
+              <h4>Fecha de Nacimiento</h4>
+              <input type="date" name="birth_date" id="birth_date" min="1900-01-01">
+          </div>
+          <div class="form__div">
+              <h4>Domicilio</h4>
+              <input type="text" name="addres" placeholder="Domicilio">
+          </div>
+          <div class="form_div_radio">
+              <h4>Perfil del usuario</h4>
+              <label for="perfilDeUsuario"><input type="radio"  name="perfilDeUsuario" value="comprador"> Comprador
+              </label>
+              <label for="perfilDeUsuario"><input type="radio" name="perfilDeUsuario" value="vendedor">
+                  vendedor</label>
+          </div>
+          <div class="form_div_checkbox">
+              <h4>Intereses</h4>
+              <label for=""><input type="checkbox" name="categoriaDeInteres" id=""> Electro</label>
+              <label for=""><input type="checkbox" name="categoriaDeInteres" id=""> Moda</label>
+              <label for=""><input type="checkbox" name="categoriaDeInteres" id=""> Hogar</label>
+              <label for=""><input type="checkbox" name="categoriaDeInteres" id=""> Jugueteria</label>
+              <label for=""><input type="checkbox" name="categoriaDeInteres" id=""> Vida sana</label>
+          </div>
+          <div class="form__div">
+              <h4>Elegí tu foto de usuario</h4>
+              <input type="file" name="avatar" accept=".jpg">
+          </div>
+          <div class="form__div">
+              <h4>Contraseña</h4>
+              <input type="password" name="pass" placeholder="Elegí tu contraseña">
+          </div>
+          <div class="form__div">
+              <h4>Confirmá contraseña</h4>
+              <input type="password" name="pass_confirm" placeholder="Confirmá tu contraseña">
+          </div>
+          <div class="form_div_button">
+              <button type="submit">Enviar</button>
+              <button type="reset">Borrar</button>
+          </div>
+          
+      </form>
+  </main>
 
-      <section class="register__main_section">
-
-        <h1>Registrate</h1>
-        
-        
-        <form action="" class="form">
-            <div class="form__box">
-                <label class="form__label" for="nombre">Nombre</label>
-                <input class="form__input" type="text" id="nombre">
-                <span class="form__error__msg">El nombre es obligatorio</span>
-            </div>
-            <div class="form__box">
-                <label class="form__label" for="apellido">Apellido</label>
-                <input class="form__input" type="text" id="apellido">
-                <span class="form__error__msg">El apellido es obligatorio</span>
-            </div>
-            <div class="form__box">
-                <label class="form__label" for="usuario">Nombre de Usuario</label>
-                <input class="form__input" type="text" id="usuario">
-                <span class="form__error__msg">El nombre de usuario es obligatorio</span>
-            </div>
-            <div class="form__box">
-                <label class="form__label" for="email">Correo electrónico</label>
-                <input class="form__input" type="email" id="email">
-                <span class="form__error__msg">El email es obligatorio</span>
-            </div>
-            <div class="form__box">
-                <label class="form__label" for="password">Contraseña</label>
-                <input class="form__input" type="password" id="password">
-                <span class="form__error__msg">La contraseña debe tener 10 carácteres com mínimo</span>
-            </div>
-            <div class="form__box">
-                <label class="form__label" for="password2">Confirma tu contraseña</label>
-                <input class="form__input" type="password" id="password2">
-                <span class="form__error__msg">La contraseña debe tener 10 carácteres com mínimo</span>
-            </div>
-            <div class="form__flex--right">
-                <a class="form__button form__button--cancel" href="">Cancelar</a>
-                <button class="form__button form__button--submit" type="submit">Registrate</button>
-            </div>
-        </form>
-       
-      </section>
-
-    </main>
 
   </body>
   
